# princengoc.github.io

./: about.html  archive.html  atom.xml  config.ini  hello-world.html  index.html  ngoc.bib  ngoc_bib.html  publications.html  pyproject.toml  second-post.html  test.html  testpage.html  tropicalGeometrySpring19.html
content/: about.md
css/: style.css
docs/: index.html
draft/: blog-ideas.md  grid-cells.md
tags/: blag.html  index.html  pygments.html
templates/: base.html
