[tool.poetry]
name = "princengoc-github-io"
version = "0.1.0"
description = ""
authors = ["Ngoc Tran <tran.mai.ngoc@gmail.com>"]
readme = "README.md"
packages = [{include = "princengoc"}]

[tool.poetry.dependencies]
python = "^3.11"
blag = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
